Prevented clipping on mobile devices
added 'viewport-fit=cover" to the meta tags in index.html. Delete to go back to default.

--- a/mscproject/src/components/Hero.css
+++ b/mscproject/src/components/Hero.css
@@ -27,6 +27,7 @@
 }
 
 h1 {
+    margin-bottom: 20px;
     font-size: 4em;
     color: white;
 }
